[gd_scene load_steps=11 format=2]

[ext_resource path="res://script/credit3.gd" type="Script" id=1]
[ext_resource path="res://startwin/แมวเฉยๆ.png" type="Texture" id=2]
[ext_resource path="res://startwin/tiny_cotton.png" type="Texture" id=3]
[ext_resource path="res://script/TextureButton.gd" type="Script" id=4]
[ext_resource path="res://startwin/tiny_team.png" type="Texture" id=5]
[ext_resource path="res://startwin/back.png" type="Texture" id=6]
[ext_resource path="res://script/mouse3.gd" type="Script" id=7]
[ext_resource path="res://cat/mouse.png" type="Texture" id=8]
[ext_resource path="res://sound/button-29.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/Ib_Ib_-_Memory_-_Piano_Ver.-aYZIaizIWxk.wav" type="AudioStream" id=10]

[node name="credit3" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0
texture = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="TextureRect"]
margin_left = 30.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
script = ExtResource( 4 )

[node name="TextureButton2" type="TextureButton" parent="TextureRect"]
margin_left = 30.0
margin_top = 150.0
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="TextureRect"]
margin_left = 650.0
margin_top = 20.0
margin_bottom = 40.0
texture_normal = ExtResource( 6 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Node2D"]
texture = ExtResource( 8 )

[node name="Sound" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource( 9 )

[node name="song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[connection signal="pressed" from="TextureRect/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="TextureRect/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="TextureRect/TextureButton3" to="." method="_on_TextureButton3_pressed"]
