extends Control



func _on_TextureButton_pressed():
	get_tree().change_scene("res://scene/credit1.tscn")
	pass # Replace with function body.


func _on_TextureButton2_pressed():
	get_tree().change_scene("res://scene/Credit2.tscn")
	pass # Replace with function body.


func _on_TextureButton3_pressed():
	get_tree().change_scene("res://scene/Control.tscn")
	pass # Replace with function body.
